more dark mode fixes

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,7 +1,7 @@
 $color-primary: hsl(0, 0%, 100%);
 $color-text: rgb(224, 220, 209);
 $color-subtext: hsl(0, 0%, 63%);
-$color-border: hsl(0, 0%, 0%);
+$color-border: hsl(0, 0%, 100%);
 $color-box-background: mix($color-primary, black, 4%);
 $border-radius: 4px;
 $font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
